@@ -1,4 +1,4 @@
-DIST modx-0.9.6.2.tar.gz 3025535 RMD160 ae9bc37411bafa3ad46dd6d6f7bfcb8bb42ddd94 SHA1 8c0ab11042f3f6593ad57c15f6dad412562f3726 SHA256 174778d51c6cb27ccff83c8270cb7dfee27ec75fd79a5da0e34933c5f4b245d3
-EBUILD modx-0.9.6.2.ebuild 712 RMD160 00dd68a5523aa7cb05279436e1ffd339992efb8c SHA1 f3cf0a12c5603936545d95696693e19cdc730057 SHA256 92b255731548477de3e30473795e51ab8a6b9516b3a65bfadec1e3f4379b414c
-MISC ChangeLog 474 RMD160 024994c73ff569ea3aec5972d3a0da85c0a227fc SHA1 092204e1a61315def1a70f2a37adb68e557b4c1a SHA256 01e26f4f0ac6209dc069fe5e3adea0a5baee0a30f9e7d08c472ff0fff7c46e36
+DIST modx-1.0.4.tar.gz 3043703 RMD160 117756d698cda10771f4787c86eb481a7d34d6f4 SHA1 380835add5d8e65326388afb05aecac75d75ff00 SHA256 feecdace11a234b4bbbcf467311ee93b97c08f8b656ad86168d40f0289042e63
+EBUILD modx-1.0.4.ebuild 670 RMD160 9da00fb937ab44c89e876b445f4b7d256ce249dc SHA1 cfde34c63d3bf265626ea56de2aa76c4fef3585b SHA256 2aaf1c345587ec23da06b8c23d767cebb0b1134f469facdece3bb6f282d8a858
+MISC ChangeLog 699 RMD160 896c18b79804961da93a34c22ae4750e6a884cc0 SHA1 c61a4da1585d8d0bee54ffa62989d8f651eb71a9 SHA256 0f5b4896e8bbf6359434b94efbf0bb694cee9e49095d1fbec223ded0a9a03bf9
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
